# templates

./: README.md  pro  tcc.c
projects/gmock/: CMakeLists.txt  project_name.cpp
